--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
 
-    <title>React App</title>
+    <title>BattleBlocks</title>
   </head>
   <body>
     <noscript>
